--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8081
+  port: 8082
 spring:
   datasource:
-    driver-class-name: oracle.jdbc.driver.OracleDriver
+    driver-class-name: oracle.jdbc.OracleDriver
     url: jdbc:oracle:thin:@14.1.76.22:1521:ZHYH
-    data-username: znwd
-    data-password: znwd
+    username: zhyh
+    password: zhyh
